// FurniTrack — Sales & Inventory System
// Paste this entire file into dbdiagram.io left panel

Table users {
  id text [pk]
  authUserId uuid [unique]
  name text [not null]
  email text [not null, unique]
  role varchar [not null, note: 'ADMIN_MANAGEMENT | SALES | INVENTORY | ACCOUNTING | OPERATIONS_DESIGN | CUSTOM | CLIENT']
  status varchar [not null, default: 'ACTIVE', note: 'ACTIVE | BLOCKED | EXPIRED | PENDING_ACTIVATION']
  accessStartsAt timestamp
  accessExpiresAt timestamp
  lastLoginAt timestamp
  emailVerifiedAt timestamp
  phone text
  address text
  permissions jsonb
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
}

Table warehouses {
  id text [pk]
  code text [not null, unique]
  name text [not null]
  street text
  city text
  country text [not null, default: 'Philippines']
  postalCode text
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
}

Table product_stocks {
  id text [pk]
  warehouseId text [not null, ref: > warehouses.id]
  sku text [not null, unique]
  itemName text [not null]
  description text
  unitOfMeasure text [not null, default: 'pcs']
  availableQty integer [not null, default: 0]
  reservedQty integer [not null, default: 0]
  reorderThreshold integer [not null, default: 10]
  state varchar [not null, default: 'AVAILABLE', note: 'AVAILABLE | RESERVED | DAMAGED | ARCHIVED']
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
}

Table material_stocks {
  id text [pk]
  warehouseId text [not null, ref: > warehouses.id]
  sku text [not null, unique]
  itemName text [not null]
  description text
  unitOfMeasure text [not null, default: 'pcs']
  availableQty integer [not null, default: 0]
  reservedQty integer [not null, default: 0]
  reorderThreshold integer [not null, default: 10]
  state varchar [not null, default: 'AVAILABLE', note: 'AVAILABLE | RESERVED | DAMAGED | ARCHIVED']
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
}

Table products {
  id text [pk]
  productStockId text [not null, unique, ref: - product_stocks.id]
  slug text [not null, unique]
  name text [not null]
  category text [not null]
  material text [not null]
  price decimal [not null]
  originalPrice decimal
  badge text
  images jsonb
  colorVariants jsonb [not null, default: '[]']
  productCode text [unique]
  rating decimal [not null, default: 0]
  reviewCount integer [not null, default: 0]
  widthCm decimal [not null]
  depthCm decimal [not null]
  heightCm decimal [not null]
  weightKg decimal [not null]
  description text [not null]
  isPublished boolean [not null, default: true]
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
}

Table draft_products {
  id text [pk]
  createdById text [not null, ref: > users.id]
  name text
  payload jsonb [not null]
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
  deletedAt timestamp
}

Table customer_inquiries {
  id text [pk]
  productId text [not null, ref: > products.id]
  customerUserId text [ref: > users.id]
  customerName text [not null]
  customerEmail text [not null]
  customerPhone text [not null]
  message text [not null]
  quantity integer [not null, default: 1]
  status varchar [not null, default: 'RECEIVED', note: 'RECEIVED | ACCEPTED | PENDING_INVENTORY_APPROVAL | PENDING_SALES_QUOTATION | GETTING_READY_FOR_BUILDING | WAITING_FOR_PAYMENT | PENDING_ACCOUNTING_APPROVAL | READY_FOR_SHIPMENT | COMPLETED']
  statusNote text
  inquiryNumber text [unique]
  quotedPrice decimal
  quotedPriceBeforeDiscount decimal
  quotationRevisionCount integer [not null, default: 0]
  quotationDiscount decimal [not null, default: 0]
  quotationAccepted boolean
  salesReviewedAt timestamp
  inventoryApprovedAt timestamp
  quotationSentAt timestamp
  quotationRespondedAt timestamp
  customerPaidAt timestamp
  accountingConfirmedAt timestamp
  buildApprovedAt timestamp
  shippingScheduledAt timestamp
  completedAt timestamp
  cancelledAt timestamp
  salesReviewedById text [ref: > users.id]
  inventoryApprovedById text [ref: > users.id]
  accountingConfirmedById text [ref: > users.id]
  buildApprovedById text [ref: > users.id]
  completedById text [ref: > users.id]
  cancelledById text [ref: > users.id]
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
}

Table quotations {
  id text [pk]
  inquiryId text [not null, ref: > customer_inquiries.id]
  quotationNumber text [unique]
  revisionNumber integer [not null, default: 1]
  sentById text [ref: > users.id]
  quotedPrice decimal [not null]
  quotedPriceBeforeDiscount decimal
  quotationDiscount decimal [not null, default: 0]
  salesNote text
  status text [not null, default: 'PENDING']
  declineReason text
  sentAt timestamp [not null, default: `now()`]
  respondedAt timestamp
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
}

Table payment_records {
  id text [pk]
  inquiryId text [ref: > customer_inquiries.id]
  paymentNumber text [unique]
  recordedById text [not null, ref: > users.id]
  paymentType varchar [not null, note: 'DOWN_PAYMENT | PARTIAL_PAYMENT | FULL_PAYMENT']
  paymentMethod text
  status varchar [not null, default: 'PENDING', note: 'PENDING | VERIFIED | REJECTED']
  amount decimal [not null]
  remainingBalance decimal [not null]
  paymentDate timestamp [not null]
  referenceNumber text
  remarks text
  verifiedAt timestamp
  verifiedById text [ref: > users.id]
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
}

Table order_chat_messages {
  id text [pk]
  inquiry_id text [not null, ref: > customer_inquiries.id]
  sender_user_id text [ref: > users.id]
  sender_role text [not null, note: 'CLIENT | SALES | SYSTEM']
  body text
  created_at timestamp [not null, default: `now()`]
}

Table order_chat_attachments {
  id text [pk]
  message_id text [not null, ref: > order_chat_messages.id]
  file_name text [not null]
  mime_type text [not null]
  attachment_type text [not null]
  data_url text [not null]
  created_at timestamp [not null, default: `now()`]
}

Table product_materials {
  id text [pk]
  productId text [not null, ref: > products.id]
  materialStockId text [not null, ref: > material_stocks.id]
  quantityRequired decimal
  quantityDisplay text
  dimension text
  notes text
  createdAt timestamp [not null, default: `now()`]
}

Table stock_movements {
  id text [pk]
  materialStockId text [ref: > material_stocks.id]
  productStockId text [ref: > product_stocks.id]
  type varchar [not null, note: 'IN | OUT | ADJUSTMENT | TRANSFER | DAMAGE']
  quantity integer [not null]
  requesterName text
  projectPurpose text
  referenceNumber text
  createdAt timestamp [not null, default: `now()`]
}

Table return_requests {
  id text [pk]
  inquiryId text [not null, ref: > customer_inquiries.id]
  customerUserId text [ref: > users.id]
  status text [not null, note: 'SUBMITTED | APPROVED_FOR_PICKUP | PICKED_UP_COMPLETED']
  reason text [not null]
  details text
  imageUrls jsonb
  salesNote text
  pickupScheduledAt timestamp
  approvedById text [ref: > users.id]
  approvedAt timestamp
  completedById text [ref: > users.id]
  completedAt timestamp
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
}

Table suppliers {
  id text [pk]
  name text [not null]
  contactPerson text
  email text
  phone text
  notes text
  isActive boolean [not null, default: true]
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
}

Table supplier_addresses {
  id text [pk]
  supplierId text [not null, ref: > suppliers.id]
  label text
  address text [not null]
  city text
  province text
  country text
  postalCode text
  isMain boolean [not null, default: false]
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
}

Table supplier_products {
  id text [pk]
  supplierId text [not null, ref: > suppliers.id]
  materialStockId text [ref: > material_stocks.id]
  materialName text [not null]
  unitCost decimal
  unitOfMeasure text
  notes text
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
}

Table purchase_orders {
  id text [pk]
  poNumber text [not null, unique]
  supplierId text [ref: > suppliers.id]
  requestedById text [not null, ref: > users.id]
  approvedById text [ref: > users.id]
  status varchar [not null, default: 'DRAFT', note: 'DRAFT | PENDING_APPROVAL | APPROVED | REJECTED | ORDERED | GOODS_RECEIVED | CANCELLED']
  totalAmount decimal [not null, default: 0]
  remarks text
  expectedDeliveryAt timestamp
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
}

Table purchase_order_items {
  id text [pk]
  purchaseOrderId text [not null, ref: > purchase_orders.id]
  materialStockId text [not null, ref: > material_stocks.id]
  quantityOrdered integer [not null]
  quantityReceived integer [not null, default: 0]
  unitCost decimal
  lineTotal decimal [not null, default: 0]
  createdAt timestamp [not null, default: `now()`]
}

Table approval_history {
  id text [pk]
  module varchar [not null, note: 'PAYMENT | CUSTOMER_INQUIRY']
  recordId text [not null]
  action varchar [not null, note: 'SUBMITTED | APPROVED | REJECTED | RETURNED_FOR_REVISION | FINALIZED']
  fromStatus text
  toStatus text
  remarks text
  actedById text [not null, ref: > users.id]
  actedAt timestamp [not null, default: `now()`]
}

Table audit_logs {
  id text [pk]
  actorId text [ref: > users.id]
  action text [not null]
  entityType text [not null]
  entityId text [not null]
  metadata jsonb
  createdAt timestamp [not null, default: `now()`]
}

Table storefront_categories {
  id text [pk]
  name text [not null, unique]
  createdAt timestamp [not null, default: `now()`]
  updatedAt timestamp [not null]
}

Table admin_account_archives {
  id text [pk]
  originalUserId text [not null, unique]
  name text [not null]
  email text [not null]
  role text [not null]
  archivedAt timestamp [not null, default: `now()`]
}

Table admin_action_archives {
  id text [pk]
  archiveId text [not null, ref: > admin_account_archives.id]
  actionType text [not null]
  description text [not null]
  performedAt timestamp [not null, default: `now()`]
  metadata jsonb
}
